[UPDATE] add upload from different context api
