# Sources/General/DocumentType.swift
@@ -1,0 +1,18 @@
+package enum DocumentType: String {
+    /// 結算申報書
+    case profitseekingEnterpriseAnnualIncomeTaxReturnDocument
+    /// 401
+    case businessTaxReturnDocument
+    /// 所客風控表
+    case businessClientRiskControlDocument
+    /// 財簽
+    case financialComplianceAuditDocument
+    /// 稅簽
+    case taxComplianceAuditDocument
+    /// 報價依據
+    case quotingProof
+    /// 同意函
+    case replyForm
+    /// 新客風控表
+    case newBusinessClientRiskControlDocument
+}
